objects/Activity.object
<CustomObject>
    <fields>
        <fullName>AssignedToMe__c</fullName>
        <description>Used to lock reports to activities that are assigned to the current user.</description>
        <formula>$User.Id == Owner:User.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned To Me</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CTILookupMethod__c</fullName>
        <inlineHelpText>Indicates the method that the CTIGadget logic used to identify a member.  If this field is not null, it means that a unique member was found and a screen pop occurred.</inlineHelpText>
        <label>CTI Lookup Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mobile Phone</fullName>
                </value>
                <value>
                    <fullName>Mobile Phone and Member Number</fullName>
                </value>
                <value>
                    <fullName>All Phones</fullName>
                </value>
                <value>
                    <fullName>All Phones and Member Number</fullName>
                </value>
                <value>
                    <fullName>Member Number</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CTILookupValue__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The value that the member keyed to lookup their account in the IVR menu (e.g. Member Number).</inlineHelpText>
        <label>CTI Lookup Value</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FirstCallOfDay__c</fullName>
        <defaultValue>false</defaultValue>
        <label>First Call of Day</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_First_Call__c</fullName>
        <formula>IF(AND( FirstCallOfDay__c = True,
 MultipleCalls__c = False),
1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is First Call</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Multiple_Call__c</fullName>
        <formula>IF(AND( FirstCallOfDay__c = True,
 MultipleCalls__c = True),
1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Multiple Call</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MultipleCalls__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Tracks if a member contacted iccu agents by phone in the same day</description>
        <label>Multiple Calls</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cnx__CTIInfo__c</fullName>
        <description>Additional CTI Information</description>
        <encryptionScheme>None</encryptionScheme>
        <label>CTI Info</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cnx__UniqueId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>UniqueId</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <listViews>
        <fullName>MyActivities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>